[package]
name = "lldpadm"
description = "Management CLI for the Oxide LLDP daemon"
version = "0.1.0"
authors = ["nils <nils@oxide.computer>"]
edition = "2021"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
lldpd-client.workspace = true
structopt.workspace = true
slog.workspace = true
tokio.workspace = true
