[package]
name = "dpd-client"
version = "0.1.0"
edition = "2021"
description = "Client library for the Dendrite data plane daemon"

[dependencies]
futures.workspace = true
reqwest.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
slog.workspace = true
tokio = { workspace = true, features = [ "full" ] }

common.workspace = true
progenitor.workspace = true
