[package]
name = "dpd-client"
version = "0.1.0"
edition = "2021"
description = "Client library for the Dendrite data plane daemon"

[features]
dendrite = [ ]

[dependencies]
regress = "0.9"
futures.workspace = true
reqwest.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
slog.workspace = true
tokio = { workspace = true, features = [ "full" ] }
uuid.workspace = true

common.workspace = true
progenitor.workspace = true
