[package]
name = "lldpd-client"
version = "0.1.0"
edition = "2021"
description = "Client library for the Oxide LLDP daemon"

[dependencies]
chrono.workspace = true
common.workspace = true
futures.workspace = true
progenitor.workspace = true
reqwest.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
slog.workspace = true
